@@ -1,13 +1,15 @@
-/*
- * Copyright (c) 2016-2021 Deephaven Data Labs and Patent Pending
- */
-
+//
+// Copyright (c) 2016-2025 Deephaven Data Labs and Patent Pending
+//
 package io.deephaven.engine.table.impl.select;
 
 import io.deephaven.base.verify.Require;
 import io.deephaven.engine.table.*;
 import io.deephaven.api.util.NameValidator;
+import io.deephaven.engine.table.impl.MatchPair;
 import io.deephaven.engine.table.impl.NoSuchColumnException;
+import io.deephaven.engine.table.impl.sources.InMemoryColumnSource;
+import io.deephaven.engine.table.impl.sources.SparseArrayColumnSource;
 import io.deephaven.engine.table.impl.sources.ViewColumnSource;
 import io.deephaven.engine.table.WritableColumnSource;
 import io.deephaven.chunk.*;
@@ -17,11 +19,10 @@ import io.deephaven.engine.rowset.RowSequence;
 import io.deephaven.engine.rowset.TrackingRowSet;
 import io.deephaven.util.type.TypeUtils;
 import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import java.util.function.BiFunction;
 import java.util.function.Function;
 
 public class FunctionalColumn<S, D> implements SelectColumn {
@@ -35,13 +36,19 @@ public class FunctionalColumn<S, D> implements SelectColumn {
     @NotNull
     private final Class<D> destDataType;
     @NotNull
-    private final BiFunction<Long, S, D> function;
-    @NotNull
+    private final RowKeyAndValueFunction<S, D> function;
+    @Nullable
     private final Class<?> componentType;
 
     private ColumnSource<S> sourceColumnSource;
 
-    public FunctionalColumn(@NotNull String sourceName,
+    @FunctionalInterface
+    public interface RowKeyAndValueFunction<S, D> {
+        D apply(long rowKey, S value);
+    }
+
+    public FunctionalColumn(
+            @NotNull String sourceName,
             @NotNull Class<S> sourceDataType,
             @NotNull String destName,
             @NotNull Class<D> destDataType,
@@ -49,34 +56,37 @@ public class FunctionalColumn<S, D> implements SelectColumn {
         this(sourceName, sourceDataType, destName, destDataType, (l, v) -> function.apply(v));
     }
 
-    public FunctionalColumn(@NotNull String sourceName,
+    public FunctionalColumn(
+            @NotNull String sourceName,
             @NotNull Class<S> sourceDataType,
             @NotNull String destName,
             @NotNull Class<D> destDataType,
-            @NotNull Class<?> componentType,
+            @Nullable Class<?> componentType,
             @NotNull Function<S, D> function) {
         this(sourceName, sourceDataType, destName, destDataType, componentType, (l, v) -> function.apply(v));
     }
 
-    public FunctionalColumn(@NotNull String sourceName,
+    public FunctionalColumn(
+            @NotNull String sourceName,
             @NotNull Class<S> sourceDataType,
             @NotNull String destName,
             @NotNull Class<D> destDataType,
-            @NotNull BiFunction<Long, S, D> function) {
-        this(sourceName, sourceDataType, destName, destDataType, Object.class, function);
+            @NotNull RowKeyAndValueFunction<S, D> function) {
+        this(sourceName, sourceDataType, destName, destDataType, null, function);
     }
 
-    public FunctionalColumn(@NotNull String sourceName,
+    public FunctionalColumn(
+            @NotNull String sourceName,
             @NotNull Class<S> sourceDataType,
             @NotNull String destName,
             @NotNull Class<D> destDataType,
-            @NotNull Class<?> componentType,
-            @NotNull BiFunction<Long, S, D> function) {
+            @Nullable Class<?> componentType,
+            @NotNull RowKeyAndValueFunction<S, D> function) {
         this.sourceName = NameValidator.validateColumnName(sourceName);
         this.sourceDataType = Require.neqNull(sourceDataType, "sourceDataType");
         this.destName = NameValidator.validateColumnName(destName);
         this.destDataType = Require.neqNull(destDataType, "destDataType");
-        this.componentType = Require.neqNull(componentType, "componentType");
+        this.componentType = componentType;
         this.function = function;
         Require.gtZero(destName.length(), "destName.length()");
     }
@@ -84,11 +94,6 @@ public class FunctionalColumn<S, D> implements SelectColumn {
     @Override
     public String toString() {
         return "function(" + sourceName + ',' + destName + ')';
-    }
-
-    @Override
-    public List<String> initInputs(Table table) {
-        throw new UnsupportedOperationException();
     }
 
     @Override
@@ -109,7 +114,7 @@ public class FunctionalColumn<S, D> implements SelectColumn {
     }
 
     @Override
-    public List<String> initDef(Map<String, ColumnDefinition<?>> columnDefinitionMap) {
+    public List<String> initDef(@NotNull final Map<String, ColumnDefinition<?>> columnDefinitionMap) {
         // noinspection unchecked
         final ColumnDefinition<S> sourceColumnDefinition = (ColumnDefinition<S>) columnDefinitionMap.get(sourceName);
         if (sourceColumnDefinition == null) {
@@ -129,27 +134,33 @@ public class FunctionalColumn<S, D> implements SelectColumn {
     }
 
     @Override
+    public Class<?> getReturnedComponentType() {
+        return componentType;
+    }
+
+    @Override
     public List<String> getColumns() {
-        return Collections.singletonList(sourceName);
+        return List.of(sourceName);
     }
 
     @Override
     public List<String> getColumnArrays() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     @NotNull
     @Override
     public ColumnSource<D> getDataView() {
         return new ViewColumnSource<>(destDataType, componentType, new Formula(null) {
+
             @Override
-            public Object getPrev(long key) {
-                return function.apply(key, sourceColumnSource.getPrev(key));
+            public Object get(final long rowKey) {
+                return function.apply(rowKey, sourceColumnSource.get(rowKey));
             }
 
             @Override
-            public Object get(long key) {
-                return function.apply(key, sourceColumnSource.get(key));
+            public Object getPrev(final long rowKey) {
+                return function.apply(rowKey, sourceColumnSource.getPrev(rowKey));
             }
 
             @Override
@@ -158,13 +169,13 @@ public class FunctionalColumn<S, D> implements SelectColumn {
             }
 
             @Override
-            public FillContext makeFillContext(int chunkCapacity) {
-                // Not sure this is right.
+            public FillContext makeFillContext(final int chunkCapacity) {
                 return new FunctionalColumnFillContext(getChunkType());
             }
 
             @Override
-            public void fillChunk(@NotNull FillContext fillContext,
+            public void fillChunk(
+                    @NotNull final FillContext fillContext,
                     @NotNull final WritableChunk<? super Values> destination,
                     @NotNull final RowSequence rowSequence) {
                 final FunctionalColumnFillContext ctx = (FunctionalColumnFillContext) fillContext;
@@ -172,19 +183,21 @@ public class FunctionalColumn<S, D> implements SelectColumn {
             }
 
             @Override
-            public void fillPrevChunk(@NotNull FillContext fillContext,
+            public void fillPrevChunk(
+                    @NotNull final FillContext fillContext,
                     @NotNull final WritableChunk<? super Values> destination,
                     @NotNull final RowSequence rowSequence) {
                 final FunctionalColumnFillContext ctx = (FunctionalColumnFillContext) fillContext;
-                ctx.chunkFiller.fillByIndices(this, rowSequence, destination);
+                ctx.chunkFiller.fillPrevByIndices(this, rowSequence, destination);
             }
-        });
+        }, false);
     }
 
     private static class FunctionalColumnFillContext implements Formula.FillContext {
-        final ChunkFiller chunkFiller;
 
-        FunctionalColumnFillContext(final ChunkType chunkType) {
+        private final ChunkFiller chunkFiller;
+
+        private FunctionalColumnFillContext(final ChunkType chunkType) {
             chunkFiller = ChunkFiller.forChunkType(chunkType);
         }
     }
@@ -192,7 +205,6 @@ public class FunctionalColumn<S, D> implements SelectColumn {
     @NotNull
     @Override
     public ColumnSource<?> getLazyView() {
-        // TODO: memoize
         return getDataView();
     }
 
@@ -207,13 +219,13 @@ public class FunctionalColumn<S, D> implements SelectColumn {
     }
 
     @Override
-    public WritableColumnSource<?> newDestInstance(long size) {
-        throw new UnsupportedOperationException();
+    public final WritableColumnSource<?> newDestInstance(final long size) {
+        return SparseArrayColumnSource.getSparseMemoryColumnSource(size, destDataType);
     }
 
     @Override
-    public WritableColumnSource<?> newFlatDestInstance(long size) {
-        throw new UnsupportedOperationException();
+    public final WritableColumnSource<?> newFlatDestInstance(final long size) {
+        return InMemoryColumnSource.getImmutableMemoryColumnSource(size, destDataType, componentType);
     }
 
     @Override
@@ -222,7 +234,7 @@ public class FunctionalColumn<S, D> implements SelectColumn {
     }
 
     @Override
-    public boolean disallowRefresh() {
+    public boolean isStateless() {
         return false;
     }
 
