@@ -1,14 +1,16 @@
-/*
- * Copyright (c) 2016-2021 Deephaven Data Labs and Patent Pending
- */
-
+//
+// Copyright (c) 2016-2025 Deephaven Data Labs and Patent Pending
+//
 package io.deephaven.engine.table.impl.select;
 
 import io.deephaven.base.verify.Require;
 import io.deephaven.engine.table.*;
 import io.deephaven.api.util.NameValidator;
+import io.deephaven.engine.table.impl.MatchPair;
 import io.deephaven.engine.table.impl.NoSuchColumnException;
 import io.deephaven.engine.table.impl.PrevColumnSource;
+import io.deephaven.engine.table.impl.sources.InMemoryColumnSource;
+import io.deephaven.engine.table.impl.sources.SparseArrayColumnSource;
 import io.deephaven.engine.table.impl.sources.ViewColumnSource;
 import io.deephaven.engine.table.WritableColumnSource;
 import io.deephaven.chunk.attributes.Values;
@@ -17,18 +19,14 @@ import io.deephaven.chunk.WritableChunk;
 import io.deephaven.engine.table.impl.chunkfillers.ChunkFiller;
 import io.deephaven.engine.rowset.RowSequence;
 import io.deephaven.engine.rowset.TrackingRowSet;
-import org.apache.commons.lang3.mutable.MutableObject;
 import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
-import java.util.function.BiFunction;
+import java.util.*;
 import java.util.stream.Collectors;
 
-// TODO: Comment the heck out of this...
 public class MultiSourceFunctionalColumn<D> implements SelectColumn {
+
     private final List<String> sourceNames;
     private ColumnSource<?>[] sourceColumns;
     private ColumnSource<?>[] prevSources;
@@ -38,29 +36,36 @@ public class MultiSourceFunctionalColumn<D> implements SelectColumn {
     @NotNull
     private final Class<D> destDataType;
     @NotNull
-    private final BiFunction<Long, ColumnSource<?>[], D> function;
-    @NotNull
+    private final RowKeyAndSourcesFunction<D> function;
+    @Nullable
     private final Class<?> componentType;
 
-    public MultiSourceFunctionalColumn(@NotNull List<String> sourceNames,
-            @NotNull String destName,
-            @NotNull Class<D> destDataType,
-            @NotNull BiFunction<Long, ColumnSource<?>[], D> function) {
-        this(sourceNames, destName, destDataType, Object.class, function);
+    @FunctionalInterface
+    public interface RowKeyAndSourcesFunction<D> {
+        D apply(long rowKey, ColumnSource<?>[] sources);
     }
 
-    public MultiSourceFunctionalColumn(@NotNull List<String> sourceNames,
+    public MultiSourceFunctionalColumn(
+            @NotNull List<String> sourceNames,
             @NotNull String destName,
             @NotNull Class<D> destDataType,
-            @NotNull Class<?> componentType,
-            @NotNull BiFunction<Long, ColumnSource<?>[], D> function) {
+            @NotNull RowKeyAndSourcesFunction<D> function) {
+        this(sourceNames, destName, destDataType, null, function);
+    }
+
+    public MultiSourceFunctionalColumn(
+            @NotNull List<String> sourceNames,
+            @NotNull String destName,
+            @NotNull Class<D> destDataType,
+            @Nullable Class<?> componentType,
+            @NotNull RowKeyAndSourcesFunction<D> function) {
         this.sourceNames = sourceNames.stream()
                 .map(NameValidator::validateColumnName)
                 .collect(Collectors.toList());
 
         this.destName = NameValidator.validateColumnName(destName);
         this.destDataType = Require.neqNull(destDataType, "destDataType");
-        this.componentType = Require.neqNull(componentType, "componentType");
+        this.componentType = componentType;
         this.function = function;
         Require.gtZero(destName.length(), "destName.length()");
     }
@@ -71,55 +76,32 @@ public class MultiSourceFunctionalColumn<D> implements SelectColumn {
     }
 
     @Override
-    public List<String> initInputs(Table table) {
-        throw new UnsupportedOperationException();
-    }
-
-    @Override
     public List<String> initInputs(TrackingRowSet rowSet, Map<String, ? extends ColumnSource<?>> columnsOfInterest) {
-        if (sourceColumns == null) {
-            final List<ColumnSource<?>> localSources = new ArrayList<>(sourceNames.size());
-            final List<ColumnSource<?>> localPrev = new ArrayList<>(sourceNames.size());
+        final List<ColumnSource<?>> localSources = new ArrayList<>(sourceNames.size());
+        final List<ColumnSource<?>> localPrev = new ArrayList<>(sourceNames.size());
 
-            // the column overrides occur when we are in the midst of an update; but we only reinterpret columns with an
-            // updateView, not as part of a generalized update. Thus if this is happening our assumptions have been
-            // violated
-            // and we could provide the wrong answer by not paying attention to the columnsOverride
-            sourceNames.forEach(name -> {
-                final ColumnSource<?> localSourceColumnSource = columnsOfInterest.get(name);
-                if (localSourceColumnSource == null) {
-                    throw new IllegalArgumentException("Source column " + name + " doesn't exist!");
-                }
+        // the column overrides occur when we are in the midst of an update; but we only reinterpret columns with an
+        // updateView, not as part of a generalized update. Thus if this is happening our assumptions have been
+        // violated and we could provide the wrong answer by not paying attention to the columnsOverride
+        sourceNames.forEach(name -> {
+            final ColumnSource<?> localSourceColumnSource = columnsOfInterest.get(name);
+            if (localSourceColumnSource == null) {
+                throw new IllegalArgumentException("Source column " + name + " doesn't exist!");
+            }
 
-                localSources.add(localSourceColumnSource);
-                localPrev.add(new PrevColumnSource<>(localSourceColumnSource));
-            });
+            localSources.add(localSourceColumnSource);
+            localPrev.add(new PrevColumnSource<>(localSourceColumnSource));
+        });
 
-            sourceColumns = localSources.toArray(ColumnSource.ZERO_LENGTH_COLUMN_SOURCE_ARRAY);
-            prevSources = localPrev.toArray(ColumnSource.ZERO_LENGTH_COLUMN_SOURCE_ARRAY);
-        }
+        sourceColumns = localSources.toArray(ColumnSource.ZERO_LENGTH_COLUMN_SOURCE_ARRAY);
+        prevSources = localPrev.toArray(ColumnSource.ZERO_LENGTH_COLUMN_SOURCE_ARRAY);
 
         return getColumns();
     }
 
     @Override
-    public List<String> initDef(Map<String, ColumnDefinition<?>> columnDefinitionMap) {
-        final MutableObject<List<String>> missingColumnsHolder = new MutableObject<>();
-        sourceNames.forEach(name -> {
-            final ColumnDefinition<?> sourceColumnDefinition = columnDefinitionMap.get(name);
-            if (sourceColumnDefinition == null) {
-                List<String> missingColumnsList;
-                if ((missingColumnsList = missingColumnsHolder.getValue()) == null) {
-                    missingColumnsHolder.setValue(missingColumnsList = new ArrayList<>());
-                }
-                missingColumnsList.add(name);
-            }
-        });
-
-        if (missingColumnsHolder.getValue() != null) {
-            throw new NoSuchColumnException(columnDefinitionMap.keySet(), missingColumnsHolder.getValue());
-        }
-
+    public List<String> initDef(@NotNull final Map<String, ColumnDefinition<?>> columnDefinitionMap) {
+        NoSuchColumnException.throwIf(columnDefinitionMap.keySet(), sourceNames);
         return getColumns();
     }
 
@@ -129,27 +111,33 @@ public class MultiSourceFunctionalColumn<D> implements SelectColumn {
     }
 
     @Override
+    public Class<?> getReturnedComponentType() {
+        return componentType;
+    }
+
+    @Override
     public List<String> getColumns() {
         return Collections.unmodifiableList(sourceNames);
     }
 
     @Override
     public List<String> getColumnArrays() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     @NotNull
     @Override
     public ColumnSource<D> getDataView() {
         return new ViewColumnSource<>(destDataType, componentType, new Formula(null) {
+
             @Override
-            public Object getPrev(long key) {
-                return function.apply(key, prevSources);
+            public Object get(long rowKey) {
+                return function.apply(rowKey, sourceColumns);
             }
 
             @Override
-            public Object get(long key) {
-                return function.apply(key, sourceColumns);
+            public Object getPrev(long rowKey) {
+                return function.apply(rowKey, prevSources);
             }
 
             @Override
@@ -159,7 +147,6 @@ public class MultiSourceFunctionalColumn<D> implements SelectColumn {
 
             @Override
             public FillContext makeFillContext(int chunkCapacity) {
-                // Not sure this is right.
                 return new FunctionalColumnFillContext(getChunkType());
             }
 
@@ -176,15 +163,16 @@ public class MultiSourceFunctionalColumn<D> implements SelectColumn {
                     @NotNull final WritableChunk<? super Values> destination,
                     @NotNull final RowSequence rowSequence) {
                 final FunctionalColumnFillContext ctx = (FunctionalColumnFillContext) fillContext;
-                ctx.chunkFiller.fillByIndices(this, rowSequence, destination);
+                ctx.chunkFiller.fillPrevByIndices(this, rowSequence, destination);
             }
-        });
+        }, false);
     }
 
     private static class FunctionalColumnFillContext implements Formula.FillContext {
-        final ChunkFiller chunkFiller;
 
-        FunctionalColumnFillContext(final ChunkType chunkType) {
+        private final ChunkFiller chunkFiller;
+
+        private FunctionalColumnFillContext(final ChunkType chunkType) {
             chunkFiller = ChunkFiller.forChunkType(chunkType);
         }
     }
@@ -192,7 +180,6 @@ public class MultiSourceFunctionalColumn<D> implements SelectColumn {
     @NotNull
     @Override
     public ColumnSource<?> getLazyView() {
-        // TODO: memoize
         return getDataView();
     }
 
@@ -207,13 +194,13 @@ public class MultiSourceFunctionalColumn<D> implements SelectColumn {
     }
 
     @Override
-    public WritableColumnSource<?> newDestInstance(long size) {
-        throw new UnsupportedOperationException();
+    public final WritableColumnSource<?> newDestInstance(final long size) {
+        return SparseArrayColumnSource.getSparseMemoryColumnSource(size, destDataType);
     }
 
     @Override
-    public WritableColumnSource<?> newFlatDestInstance(long size) {
-        throw new UnsupportedOperationException();
+    public final WritableColumnSource<?> newFlatDestInstance(final long size) {
+        return InMemoryColumnSource.getImmutableMemoryColumnSource(size, destDataType, componentType);
     }
 
     @Override
@@ -222,7 +209,7 @@ public class MultiSourceFunctionalColumn<D> implements SelectColumn {
     }
 
     @Override
-    public boolean disallowRefresh() {
+    public boolean isStateless() {
         return false;
     }
 
