@@ -1,14 +1,26 @@
+//
+// Copyright (c) 2016-2025 Deephaven Data Labs and Patent Pending
+//
 package io.deephaven.engine.table.impl.util;
 
 import io.deephaven.chunk.attributes.Values;
+import io.deephaven.engine.context.ExecutionContext;
+import io.deephaven.engine.primitive.iterator.CloseableIterator;
+import io.deephaven.engine.primitive.iterator.CloseablePrimitiveIteratorOfInt;
 import io.deephaven.engine.table.ChunkSource;
 import io.deephaven.engine.table.SharedContext;
 import io.deephaven.engine.table.Table;
-import io.deephaven.engine.updategraph.UpdateGraphProcessor;
-import io.deephaven.engine.table.lang.QueryScope;
+import io.deephaven.engine.testutil.ColumnInfo;
+import io.deephaven.engine.testutil.QueryTableTestBase;
+import io.deephaven.engine.testutil.generator.DoubleGenerator;
+import io.deephaven.engine.testutil.generator.IntGenerator;
+import io.deephaven.engine.testutil.generator.SetGenerator;
+import io.deephaven.engine.testutil.testcase.RefreshingTableTestCase;
+import io.deephaven.engine.testutil.EvalNugget;
+import io.deephaven.engine.testutil.EvalNuggetInterface;
+import io.deephaven.engine.context.QueryScope;
 import io.deephaven.engine.util.TableTools;
 import io.deephaven.engine.table.impl.*;
-import io.deephaven.engine.table.iterators.IntegerColumnIterator;
 import io.deephaven.engine.table.ColumnSource;
 import io.deephaven.chunk.*;
 import junit.framework.TestCase;
@@ -16,7 +28,7 @@ import junit.framework.TestCase;
 import java.util.*;
 
 import static io.deephaven.engine.util.TableTools.*;
-import static io.deephaven.engine.table.impl.TstUtils.*;
+import static io.deephaven.engine.testutil.TstUtils.*;
 
 public class TestColumnsToRowsTransform extends RefreshingTableTestCase {
     public void testStatic() {
@@ -45,8 +57,8 @@ public class TestColumnsToRowsTransform extends RefreshingTableTestCase {
         final Table ex3 = TableTools.newTable(stringCol("Sym", "AAPL", "AAPL", "AAPL", "SPY", "SPY", "SPY"),
                 stringCol("Label", "First", "Second", "Third", "First", "Second", "Third"), intCol("Value", expected));
         assertTableEquals(ex3, out3);
-        final Iterator<Integer> it = out3.columnIterator("Value");
-        final IntegerColumnIterator it2 = out3.integerColumnIterator("Value");
+        final CloseableIterator<Integer> it = out3.columnIterator("Value");
+        final CloseablePrimitiveIteratorOfInt it2 = out3.integerColumnIterator("Value");
         int position = 0;
         while (it.hasNext()) {
             assertEquals(expected[position++], (int) it.next());
@@ -88,7 +100,6 @@ public class TestColumnsToRowsTransform extends RefreshingTableTestCase {
         final Table filtered = out.where("Sentinel=101 && Name=`V1` || Sentinel=102 && Name=`V2`");
         showWithRowSet(filtered);
 
-        // noinspection unchecked
         final ColumnSource<Integer> valueSource = filtered.getColumnSource("Value");
         try (final WritableIntChunk<Values> destination = WritableIntChunk.makeWritableChunk(2);
                 final SharedContext sharedContext = SharedContext.makeSharedContext();
@@ -133,28 +144,27 @@ public class TestColumnsToRowsTransform extends RefreshingTableTestCase {
 
     private void testIncremental(int seed) {
         final Random random = new Random(0);
-        final TstUtils.ColumnInfo[] columnInfo;
+        final ColumnInfo<?, ?>[] columnInfo;
         final int size = 30;
         final QueryTable queryTable = getTable(size, random,
                 columnInfo = initColumnInfos(new String[] {"Sym", "D1", "D2", "D3", "I1", "I2", "I3", "I4", "I5"},
-                        new TstUtils.SetGenerator<>("a", "b", "c", "d", "e"),
-                        new TstUtils.DoubleGenerator(0, 10),
-                        new TstUtils.DoubleGenerator(10, 100),
-                        new TstUtils.DoubleGenerator(100, 1000),
-                        new TstUtils.IntGenerator(1000, 10000),
-                        new TstUtils.IntGenerator(10000, 100000),
-                        new TstUtils.IntGenerator(100000, 1000000),
-                        new TstUtils.IntGenerator(1000000, 10000000),
-                        new TstUtils.IntGenerator(10000000, 100000000)));
+                        new SetGenerator<>("a", "b", "c", "d", "e"),
+                        new DoubleGenerator(0, 10),
+                        new DoubleGenerator(10, 100),
+                        new DoubleGenerator(100, 1000),
+                        new IntGenerator(1000, 10000),
+                        new IntGenerator(10000, 100000),
+                        new IntGenerator(100000, 1000000),
+                        new IntGenerator(1000000, 10000000),
+                        new IntGenerator(10000000, 100000000)));
 
-        final Map<String, String> nameMap = new HashMap<>();
-        nameMap.put("I1", "EyeOne");
-        nameMap.put("I2", "AiTwo");
-        nameMap.put("I3", "IThree");
-        nameMap.put("First", "EyeOne");
-        nameMap.put("Second", "AiTwo");
-        nameMap.put("Third", "IThree");
-        QueryScope.addParam("nameMap", Collections.unmodifiableMap(nameMap));
+        QueryScope.addParam("nameMap", Map.of(
+                "I1", "EyeOne",
+                "I2", "AiTwo",
+                "I3", "IThree",
+                "First", "EyeOne",
+                "Second", "AiTwo",
+                "Third", "IThree"));
 
         final EvalNuggetInterface[] en = new EvalNuggetInterface[] {
                 EvalNugget.from(
@@ -179,27 +189,24 @@ public class TestColumnsToRowsTransform extends RefreshingTableTestCase {
                         .updateView("MappedVal=nameMap.get(Name)").where("MappedVal in `EyeOne` || Value > 50000")),
                 new QueryTableTestBase.TableComparator(
                         ColumnsToRowsTransform.columnsToRows(queryTable, "Name", "Value", "I1", "I2", "I3"),
-                        UpdateGraphProcessor.DEFAULT.sharedLock()
-                                .computeLocked(() -> queryTable
-                                        .update("Name=new String[]{`I1`, `I2`, `I3`}", "Value=new int[]{I1, I2, I3}")
-                                        .dropColumns("I1", "I2", "I3").ungroup())),
+                        ExecutionContext.getContext().getUpdateGraph().sharedLock().computeLocked(() -> queryTable
+                                .update("Name=new String[]{`I1`, `I2`, `I3`}", "Value=new int[]{I1, I2, I3}")
+                                .dropColumns("I1", "I2", "I3").ungroup())),
                 new QueryTableTestBase.TableComparator(
                         ColumnsToRowsTransform.columnsToRows(queryTable, "Name", "Value", "I1", "I2", "I3")
                                 .updateView("MappedVal=nameMap.get(Name)")
                                 .where("MappedVal in `EyeOne` || Value > 50000"),
-                        UpdateGraphProcessor.DEFAULT.sharedLock()
-                                .computeLocked(() -> queryTable
-                                        .update("Name=new String[]{`I1`, `I2`, `I3`}", "Value=new int[]{I1, I2, I3}")
-                                        .dropColumns("I1", "I2", "I3").ungroup())
+                        ExecutionContext.getContext().getUpdateGraph().sharedLock().computeLocked(() -> queryTable
+                                .update("Name=new String[]{`I1`, `I2`, `I3`}", "Value=new int[]{I1, I2, I3}")
+                                .dropColumns("I1", "I2", "I3").ungroup())
                                 .updateView("MappedVal=nameMap.get(Name)")
                                 .where("MappedVal in `EyeOne` || Value > 50000")),
                 new QueryTableTestBase.TableComparator(
                         ColumnsToRowsTransform.columnsToRows(queryTable, "Name", "Value", "I1", "I2", "I3")
                                 .updateView("MappedVal=nameMap.get(Name)").where("MappedVal in `EyeOne`"),
-                        UpdateGraphProcessor.DEFAULT.sharedLock()
-                                .computeLocked(() -> queryTable
-                                        .update("Name=new String[]{`I1`, `I2`, `I3`}", "Value=new int[]{I1, I2, I3}")
-                                        .dropColumns("I1", "I2", "I3").ungroup())
+                        ExecutionContext.getContext().getUpdateGraph().sharedLock().computeLocked(() -> queryTable
+                                .update("Name=new String[]{`I1`, `I2`, `I3`}", "Value=new int[]{I1, I2, I3}")
+                                .dropColumns("I1", "I2", "I3").ungroup())
                                 .updateView("MappedVal=nameMap.get(Name)").where("MappedVal in `EyeOne`")),
                 EvalNugget.from(() -> ColumnsToRowsTransform
                         .columnsToRows(queryTable, "Name", "Value", "I1", "I2", "I3").where("Value > 50000")),
@@ -210,11 +217,10 @@ public class TestColumnsToRowsTransform extends RefreshingTableTestCase {
                         ColumnsToRowsTransform.columnsToRows(queryTable, "Name", new String[] {"IV", "DV"},
                                 new String[] {"First", "Second", "Third"},
                                 new String[][] {new String[] {"I1", "I2", "I3"}, new String[] {"D1", "D2", "D3"}}),
-                        UpdateGraphProcessor.DEFAULT.sharedLock()
-                                .computeLocked(() -> queryTable
-                                        .update("Name=new String[]{`First`, `Second`, `Third`}",
-                                                "IV=new int[]{I1, I2, I3}", "DV=new double[]{D1, D2, D3}")
-                                        .dropColumns("I1", "I2", "I3", "D1", "D2", "D3").ungroup())),
+                        ExecutionContext.getContext().getUpdateGraph().sharedLock().computeLocked(() -> queryTable
+                                .update("Name=new String[]{`First`, `Second`, `Third`}",
+                                        "IV=new int[]{I1, I2, I3}", "DV=new double[]{D1, D2, D3}")
+                                .dropColumns("I1", "I2", "I3", "D1", "D2", "D3").ungroup())),
                 new QueryTableTestBase.TableComparator(
                         ColumnsToRowsTransform
                                 .columnsToRows(queryTable, "Name", new String[] {"IV", "DV"},
@@ -222,7 +228,7 @@ public class TestColumnsToRowsTransform extends RefreshingTableTestCase {
                                         new String[][] {new String[] {"I1", "I2", "I3"},
                                                 new String[] {"D1", "D2", "D3"}})
                                 .updateView("MappedVal=nameMap.get(Name)").where("MappedVal in `AiTwo`"),
-                        UpdateGraphProcessor.DEFAULT.sharedLock().computeLocked(() -> queryTable
+                        ExecutionContext.getContext().getUpdateGraph().sharedLock().computeLocked(() -> queryTable
                                 .update("Name=new String[]{`First`, `Second`, `Third`}", "IV=new int[]{I1, I2, I3}",
                                         "DV=new double[]{D1, D2, D3}")
                                 .dropColumns("I1", "I2", "I3", "D1", "D2", "D3").ungroup()
