@@ -1,7 +1,6 @@
-/*
- * Copyright (c) 2016-2021 Deephaven Data Labs and Patent Pending
- */
-
+//
+// Copyright (c) 2016-2025 Deephaven Data Labs and Patent Pending
+//
 package io.deephaven.server.session;
 
 import com.github.f4b6a3.uuid.UuidCreator;
@@ -11,18 +10,14 @@ import dagger.assisted.AssistedFactory;
 import dagger.assisted.AssistedInject;
 import io.deephaven.base.reference.WeakSimpleReference;
 import io.deephaven.base.verify.Assert;
-import io.deephaven.base.verify.Require;
 import io.deephaven.engine.liveness.LivenessArtifact;
 import io.deephaven.engine.liveness.LivenessReferent;
 import io.deephaven.engine.liveness.LivenessScopeStack;
 import io.deephaven.engine.table.impl.perf.QueryPerformanceNugget;
 import io.deephaven.engine.table.impl.perf.QueryPerformanceRecorder;
-import io.deephaven.engine.table.impl.perf.QueryProcessingResults;
-import io.deephaven.engine.table.impl.util.MemoryTableLoggers;
-import io.deephaven.engine.tablelogger.QueryOperationPerformanceLogLogger;
-import io.deephaven.engine.tablelogger.QueryPerformanceLogLogger;
+import io.deephaven.engine.table.impl.perf.QueryState;
+import io.deephaven.engine.table.impl.util.EngineMetrics;
 import io.deephaven.engine.updategraph.DynamicNode;
-import io.deephaven.extensions.barrage.util.GrpcUtil;
 import io.deephaven.hash.KeyedIntObjectHash;
 import io.deephaven.hash.KeyedIntObjectHashMap;
 import io.deephaven.hash.KeyedIntObjectKey;
@@ -32,12 +27,15 @@ import io.deephaven.io.logger.Logger;
 import io.deephaven.proto.backplane.grpc.ExportNotification;
 import io.deephaven.proto.backplane.grpc.Ticket;
 import io.deephaven.proto.flight.util.FlightExportTicketHelper;
+import io.deephaven.proto.util.Exceptions;
 import io.deephaven.proto.util.ExportTicketHelper;
 import io.deephaven.server.util.Scheduler;
+import io.deephaven.engine.context.ExecutionContext;
 import io.deephaven.util.SafeCloseable;
 import io.deephaven.util.annotations.VisibleForTesting;
-import io.deephaven.util.auth.AuthContext;
+import io.deephaven.auth.AuthContext;
 import io.deephaven.util.datastructures.SimpleReferenceManager;
+import io.deephaven.util.process.ProcessEnvironment;
 import io.grpc.StatusRuntimeException;
 import io.grpc.stub.StreamObserver;
 import org.apache.arrow.flight.impl.Flight;
@@ -45,10 +43,11 @@ import org.apache.commons.lang3.mutable.MutableObject;
 import org.jetbrains.annotations.NotNull;
 
 import javax.annotation.Nullable;
+import javax.annotation.OverridingMethodsMustInvokeSuper;
+import javax.inject.Provider;
 import java.io.Closeable;
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
@@ -56,30 +55,38 @@ import java.util.concurrent.Callable;
 import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.concurrent.atomic.AtomicIntegerFieldUpdater;
 import java.util.concurrent.atomic.AtomicReferenceFieldUpdater;
+import java.util.function.Consumer;
 
-import static io.deephaven.extensions.barrage.util.GrpcUtil.safelyExecute;
-import static io.deephaven.extensions.barrage.util.GrpcUtil.safelyExecuteLocked;
+import static io.deephaven.base.log.LogOutput.MILLIS_FROM_EPOCH_FORMATTER;
+import static io.deephaven.extensions.barrage.util.GrpcUtil.safelyComplete;
+import static io.deephaven.extensions.barrage.util.GrpcUtil.safelyError;
 
 /**
  * SessionState manages all exports for a single session.
  *
+ * <p>
  * It manages exported {@link LivenessReferent}. It cascades failures to child dependencies.
  *
+ * <p>
  * TODO: - cyclical dependency detection - out-of-order dependency timeout
  *
+ * <p>
  * Details Regarding Data Structure of ExportObjects:
  *
- * The exportMap map, exportListeners list, exportListenerVersion, and export object's exportListenerVersion work
+ * <ul>
+ * <li>The exportMap map, exportListeners list, exportListenerVersion, and export object's exportListenerVersion work
  * together to enable a listener to synchronize with outstanding exports in addition to sending the listener updates
- * while they continue to subscribe.
+ * while they continue to subscribe.</li>
  *
- * - SessionState::exportMap's purpose is to map from the export id to the export object -
- * SessionState::exportListeners' purpose is to keep a list of active subscribers -
- * SessionState::exportListenerVersion's purpose is to know whether or not a subscriber has already seen a status
+ * <li>SessionState::exportMap's purpose is to map from the export id to the export object</li>
+ * <li>SessionState::exportListeners' purpose is to keep a list of active subscribers</li>
+ * <li>SessionState::exportListenerVersion's purpose is to know whether or not a subscriber has already seen a
+ * status</li>
  *
- * A listener will receive an export notification for export id NON_EXPORT_ID (a zero) to indicate that the run has
+ * <li>A listener will receive an export notification for export id NON_EXPORT_ID (a zero) to indicate that the run has
  * completed. A listener may see an update for an export before receiving the "run has completed" message. A listener
- * should be prepared to receive duplicate/redundant updates.
+ * should be prepared to receive duplicate/redundant updates.</li>
+ * </ul>
  */
 public class SessionState {
     // Some work items will be dependent on other exports, but do not export anything themselves.
@@ -101,10 +108,25 @@ public class SessionState {
         return new ExportObject<>(export);
     }
 
+    /**
+     * Wrap an exception in an ExportObject to make it conform to the session export API. The export behaves as if it
+     * has already failed.
+     *
+     * @param caughtException the exception to propagate
+     * @param <T> the type of the object
+     * @return a sessionless export object
+     */
+    public static <T> ExportObject<T> wrapAsFailedExport(final Exception caughtException) {
+        ExportObject<T> exportObject = new ExportObject<>(null);
+        exportObject.caughtException = caughtException;
+        return exportObject;
+    }
+
     private static final Logger log = LoggerFactory.getLogger(SessionState.class);
 
     private final String logPrefix;
     private final Scheduler scheduler;
+    private final SessionService.ErrorTransformer errorTransformer;
     private final AuthContext authContext;
 
     private final String sessionId;
@@ -130,13 +152,21 @@ public class SessionState {
     private final SimpleReferenceManager<Closeable, WeakSimpleReference<Closeable>> onCloseCallbacks =
             new SimpleReferenceManager<>(WeakSimpleReference::new, false);
 
+    private final ExecutionContext executionContext;
+
     @AssistedInject
-    public SessionState(final Scheduler scheduler, @Assisted final AuthContext authContext) {
+    public SessionState(
+            final Scheduler scheduler,
+            final SessionService.ErrorTransformer errorTransformer,
+            final Provider<ExecutionContext> executionContextProvider,
+            @Assisted final AuthContext authContext) {
         this.sessionId = UuidCreator.toString(UuidCreator.getRandomBased());
         this.logPrefix = "SessionState{" + sessionId + "}: ";
         this.scheduler = scheduler;
+        this.errorTransformer = errorTransformer;
         this.authContext = authContext;
-        log.info().append(logPrefix).append("session initialized").endl();
+        this.executionContext = executionContextProvider.get().withAuthContext(authContext);
+        log.debug().append(logPrefix).append("session initialized").endl();
     }
 
     /**
@@ -154,9 +184,9 @@ public class SessionState {
             throw new IllegalStateException("session already initialized");
         }
 
-        log.info().append(logPrefix)
+        log.debug().append(logPrefix)
                 .append("token initialized to '").append(expiration.token.toString())
-                .append("' which expires at ").append(expiration.deadline.toString())
+                .append("' which expires at ").append(MILLIS_FROM_EPOCH_FORMATTER, expiration.deadlineMillis)
                 .append(".").endl();
     }
 
@@ -180,13 +210,18 @@ public class SessionState {
         }
 
         if (prevToken == null) {
-            throw GrpcUtil.statusRuntimeException(Code.UNAUTHENTICATED, "session has expired");
+            throw Exceptions.statusRuntimeException(Code.UNAUTHENTICATED, "session has expired");
         }
 
-        log.info().append(logPrefix)
-                .append("token rotating to '").append(expiration.token.toString())
-                .append("' which expires at ").append(expiration.deadline.toString())
-                .append(".").endl();
+        log.debug().append(logPrefix).append("token, expires at ")
+                .append(MILLIS_FROM_EPOCH_FORMATTER, expiration.deadlineMillis).append(".").endl();
+    }
+
+    /**
+     * @return the session id
+     */
+    public String getSessionId() {
+        return sessionId;
     }
 
     /**
@@ -204,7 +239,7 @@ public class SessionState {
      */
     public boolean isExpired() {
         final SessionService.TokenExpiration currToken = expiration;
-        return currToken == null || currToken.deadline.compareTo(scheduler.currentTime()) <= 0;
+        return currToken == null || currToken.deadlineMillis <= scheduler.currentTimeMillis();
     }
 
     /**
@@ -212,6 +247,13 @@ public class SessionState {
      */
     public AuthContext getAuthContext() {
         return authContext;
+    }
+
+    /**
+     * @return the execution context for this session
+     */
+    public ExecutionContext getExecutionContext() {
+        return executionContext;
     }
 
     /**
@@ -245,21 +287,26 @@ public class SessionState {
     @SuppressWarnings("unchecked")
     public <T> ExportObject<T> getExport(final int exportId) {
         if (isExpired()) {
-            throw GrpcUtil.statusRuntimeException(Code.UNAUTHENTICATED, "session has expired");
+            throw Exceptions.statusRuntimeException(Code.UNAUTHENTICATED, "session has expired");
         }
 
         final ExportObject<T> result;
 
-        // If this a non-export or server side export, then it must already exist or else is a user error.
-        if (exportId <= NON_EXPORT_ID) {
+        if (exportId < NON_EXPORT_ID) {
+            // If this a server-side export then it must already exist or else is a user error.
             result = (ExportObject<T>) exportMap.get(exportId);
 
             if (result == null) {
-                throw GrpcUtil.statusRuntimeException(Code.FAILED_PRECONDITION,
+                throw Exceptions.statusRuntimeException(Code.FAILED_PRECONDITION,
                         "Export id " + exportId + " does not exist and cannot be used out-of-order!");
             }
-        } else {
+        } else if (exportId > NON_EXPORT_ID) {
+            // If this a client-side export we'll allow an out-of-order request by creating a new export object.
             result = (ExportObject<T>) exportMap.putIfAbsent(exportId, EXPORT_OBJECT_VALUE_FACTORY);
+        } else {
+            // If this is a non-export request, then it is a user error.
+            throw Exceptions.statusRuntimeException(Code.INVALID_ARGUMENT,
+                    "Export id " + exportId + " refers to a non-export and cannot be requested!");
         }
 
         return result;
@@ -274,7 +321,7 @@ public class SessionState {
     @SuppressWarnings("unchecked")
     public <T> ExportObject<T> getExportIfExists(final int exportId) {
         if (isExpired()) {
-            throw GrpcUtil.statusRuntimeException(Code.UNAUTHENTICATED, "session has expired");
+            throw Exceptions.statusRuntimeException(Code.UNAUTHENTICATED, "session has expired");
         }
 
         return (ExportObject<T>) exportMap.get(exportId);
@@ -301,7 +348,7 @@ public class SessionState {
      */
     public <T> ExportObject<T> newServerSideExport(final T export) {
         if (isExpired()) {
-            throw GrpcUtil.statusRuntimeException(Code.UNAUTHENTICATED, "session has expired");
+            throw Exceptions.statusRuntimeException(Code.UNAUTHENTICATED, "session has expired");
         }
 
         final int exportId = SERVER_EXPORT_UPDATER.getAndDecrement(this);
@@ -346,7 +393,7 @@ public class SessionState {
     @VisibleForTesting
     public <T> ExportBuilder<T> newExport(final int exportId) {
         if (isExpired()) {
-            throw GrpcUtil.statusRuntimeException(Code.UNAUTHENTICATED, "session has expired");
+            throw Exceptions.statusRuntimeException(Code.UNAUTHENTICATED, "session has expired");
         }
         if (exportId <= 0) {
             throw new IllegalArgumentException("exportId's <= 0 are reserved for server allocation only");
@@ -361,7 +408,7 @@ public class SessionState {
      */
     public <T> ExportBuilder<T> nonExport() {
         if (isExpired()) {
-            throw GrpcUtil.statusRuntimeException(Code.UNAUTHENTICATED, "session has expired");
+            throw Exceptions.statusRuntimeException(Code.UNAUTHENTICATED, "session has expired");
         }
         return new ExportBuilder<>(NON_EXPORT_ID);
     }
@@ -371,7 +418,6 @@ public class SessionState {
      * the close() method be idempotent, but when combined with {@link #removeOnCloseCallback(Closeable)}, close() will
      * only be called once from this class.
      * <p>
-     * </p>
      * If called after the session has expired, this will throw, and the close() method on the provided instance will
      * not be called.
      *
@@ -382,7 +428,7 @@ public class SessionState {
             if (isExpired()) {
                 // After the session has expired, nothing new can be added to the collection, so throw an exception (and
                 // release the lock, allowing each item already in the collection to be released)
-                throw GrpcUtil.statusRuntimeException(Code.UNAUTHENTICATED, "session has expired");
+                throw Exceptions.statusRuntimeException(Code.UNAUTHENTICATED, "session has expired");
             }
             onCloseCallbacks.add(onClose);
         }
@@ -390,7 +436,7 @@ public class SessionState {
 
     /**
      * Remove an on-close callback bound to the life of the session.
-     * <p />
+     * <p>
      * A common pattern to use this will be for an object to try to remove itself, and if it succeeds, to call its own
      * {@link Closeable#close()}. If it fails, it can expect to have close() be called automatically.
      *
@@ -401,12 +447,11 @@ public class SessionState {
      *          already been invoked or will be invoked by the SessionState.
      */
     public boolean removeOnCloseCallback(final Closeable onClose) {
+        if (isExpired()) {
+            // After the session has expired, nothing can be removed from the collection.
+            return false;
+        }
         synchronized (onCloseCallbacks) {
-            if (isExpired()) {
-                // After the session has expired, nothing can be removed from the collection. We return false here,
-                // preventing a closeable from trying to remove itself during its own close()
-                return false;
-            }
             return onCloseCallbacks.remove(onClose) != null;
         }
     }
@@ -428,28 +473,31 @@ public class SessionState {
             return;
         }
 
-        log.info().append(logPrefix).append("releasing outstanding exports").endl();
+        log.debug().append(logPrefix).append("releasing outstanding exports").endl();
         synchronized (exportMap) {
             exportMap.forEach(ExportObject::cancel);
+            exportMap.clear();
         }
-        exportMap.clear();
 
-        log.info().append(logPrefix).append("outstanding exports released").endl();
+        log.debug().append(logPrefix).append("outstanding exports released").endl();
         synchronized (exportListeners) {
             exportListeners.forEach(ExportListener::onRemove);
             exportListeners.clear();
         }
 
+        final List<Closeable> callbacksToClose;
         synchronized (onCloseCallbacks) {
-            onCloseCallbacks.forEach((ref, callback) -> {
-                try {
-                    callback.close();
-                } catch (final IOException e) {
-                    log.error().append(logPrefix).append("error during onClose callback: ").append(e).endl();
-                }
-            });
+            callbacksToClose = new ArrayList<>(onCloseCallbacks.size());
+            onCloseCallbacks.forEach((ref, callback) -> callbacksToClose.add(callback));
             onCloseCallbacks.clear();
         }
+        callbacksToClose.forEach(callback -> {
+            try {
+                callback.close();
+            } catch (final IOException e) {
+                log.error().append(logPrefix).append("error during onClose callback: ").append(e).endl();
+            }
+        });
     }
 
     /**
@@ -473,24 +521,29 @@ public class SessionState {
     /**
      * This class represents one unit of content exported in the session.
      *
-     *
+     * <p>
      * Note: we reuse ExportObject for non-exporting tasks that have export dependencies.
      *
-     * @param <T> Is context sensitive depending on the export.
-     *
+     * @param <T> Is context-sensitive depending on the export.
      * @apiNote ExportId may be 0, if this is a task that has exported dependencies, but does not export anything
-     *          itself.
-     * @apiNote Non-exports do not publish state changes.
+     *          itself. Non-exports do not publish state changes.
      */
     public final static class ExportObject<T> extends LivenessArtifact {
         private final int exportId;
         private final String logIdentity;
+        private final SessionService.ErrorTransformer errorTransformer;
         private final SessionState session;
+
+        /** used to keep track of performance details either for aggregation or for the async ticket resolution */
+        private QueryPerformanceRecorder queryPerformanceRecorder;
 
         /** final result of export */
         private volatile T result;
         private volatile ExportNotification.State state = ExportNotification.State.UNKNOWN;
         private volatile int exportListenerVersion = 0;
+
+        /** Indicates whether this export has already been well defined. This prevents export object reuse. */
+        private boolean hasHadWorkSet = false;
 
         /** This indicates whether or not this export should use the serial execution queue. */
         private boolean requiresSerialQueue;
@@ -498,7 +551,11 @@ public class SessionState {
         /** This is a reference of the work to-be-done. It is non-null only during the PENDING state. */
         private Callable<T> exportMain;
         /** This is a reference to the error handler to call if this item enters one of the failure states. */
+        @Nullable
         private ExportErrorHandler errorHandler;
+        /** This is a reference to the success handler to call if this item successfully exports. */
+        @Nullable
+        private Consumer<? super T> successHandler;
 
         /** used to keep track of which children need notification on export completion */
         private List<ExportObject<?>> children = Collections.emptyList();
@@ -507,6 +564,9 @@ public class SessionState {
 
         /** used to detect when this object is ready for export (is visible for atomic int field updater) */
         private volatile int dependentCount = -1;
+        /** our first parent that was already released prior to having dependencies set if one exists */
+        private ExportObject<?> alreadyDeadParent;
+
         @SuppressWarnings("unchecked")
         private static final AtomicIntegerFieldUpdater<ExportObject<?>> DEPENDENT_COUNT_UPDATER =
                 AtomicIntegerFieldUpdater.newUpdater((Class<ExportObject<?>>) (Class<?>) ExportObject.class,
@@ -514,22 +574,27 @@ public class SessionState {
 
         /** used to identify and propagate error details */
         private String errorId;
-        private String dependentHandle;
+        private String failedDependencyLogIdentity;
+        private Exception caughtException;
 
         /**
+         * @param errorTransformer the error transformer to use
          * @param exportId the export id for this export
          */
-        private ExportObject(final SessionState session, final int exportId) {
+        private ExportObject(
+                final SessionService.ErrorTransformer errorTransformer,
+                final SessionState session,
+                final int exportId) {
+            super(true);
+            this.errorTransformer = errorTransformer;
             this.session = session;
             this.exportId = exportId;
             this.logIdentity =
                     isNonExport() ? Integer.toHexString(System.identityHashCode(this)) : Long.toString(exportId);
             setState(ExportNotification.State.UNKNOWN);
 
-            // non-exports stay alive until they have been exported
-            if (isNonExport()) {
-                retainReference();
-            }
+            // we retain a reference until a non-export becomes EXPORTED or a regular export becomes RELEASED
+            retainReference();
         }
 
         /**
@@ -539,20 +604,41 @@ public class SessionState {
          * @param result the object to wrap in an export
          */
         private ExportObject(final T result) {
+            super(true);
+            this.errorTransformer = null;
             this.session = null;
             this.exportId = NON_EXPORT_ID;
-            this.state = ExportNotification.State.EXPORTED;
             this.result = result;
             this.dependentCount = 0;
+            this.hasHadWorkSet = true;
             this.logIdentity = Integer.toHexString(System.identityHashCode(this)) + "-sessionless";
+
+            if (result == null) {
+                maybeAssignErrorId();
+                state = ExportNotification.State.FAILED;
+            } else {
+                state = ExportNotification.State.EXPORTED;
+            }
 
             if (result instanceof LivenessReferent && DynamicNode.notDynamicOrIsRefreshing(result)) {
                 manage((LivenessReferent) result);
             }
         }
 
-        private boolean isNonExport() {
+        /**
+         * @return if this export is a session-less non-export
+         */
+        public boolean isNonExport() {
             return exportId == NON_EXPORT_ID;
+        }
+
+        private synchronized void setQueryPerformanceRecorder(
+                final QueryPerformanceRecorder queryPerformanceRecorder) {
+            if (this.queryPerformanceRecorder != null) {
+                throw new IllegalStateException(
+                        "performance query recorder can only be set once on an exportable object");
+            }
+            this.queryPerformanceRecorder = queryPerformanceRecorder;
         }
 
         /**
@@ -567,7 +653,14 @@ public class SessionState {
 
             this.parents = parents;
             dependentCount = parents.size();
-            parents.stream().filter(Objects::nonNull).forEach(this::manage);
+            for (final ExportObject<?> parent : parents) {
+                if (parent != null && !tryManage(parent)) {
+                    // we've failed; let's cleanup already managed parents
+                    forceReferenceCountToZero();
+                    alreadyDeadParent = parent;
+                    break;
+                }
+            }
 
             if (log.isDebugEnabled()) {
                 final Exception e = new RuntimeException();
@@ -588,22 +681,51 @@ public class SessionState {
          * @param exportMain the exportMain callable to invoke when dependencies are satisfied
          * @param errorHandler the errorHandler to notify so that it may propagate errors to the requesting client
          */
-        private synchronized void setWork(final Callable<T> exportMain, final ExportErrorHandler errorHandler,
+        private synchronized void setWork(
+                @NotNull final Callable<T> exportMain,
+                @Nullable final ExportErrorHandler errorHandler,
+                @Nullable final Consumer<? super T> successHandler,
                 final boolean requiresSerialQueue) {
-            if (this.exportMain != null) {
-                throw new IllegalStateException("work can only be set once on an exportable object");
+            if (hasHadWorkSet) {
+                throw new IllegalStateException("export object can only be defined once");
+            }
+            hasHadWorkSet = true;
+            if (queryPerformanceRecorder != null && queryPerformanceRecorder.getState() == QueryState.RUNNING) {
+                // transfer ownership of the qpr to the export before it can be resumed by the scheduler
+                queryPerformanceRecorder.suspendQuery();
             }
             this.requiresSerialQueue = requiresSerialQueue;
 
-            if (isExportStateTerminal(this.state)) {
-                // nothing to do because dependency already failed; hooray??
+            // we defer this type of failure until setWork for consistency in error handling
+            if (alreadyDeadParent != null) {
+                onDependencyFailure(alreadyDeadParent);
+                alreadyDeadParent = null;
+            }
+
+            if (isExportStateTerminal(state)) {
+                // The following scenarios cause us to get into this state:
+                // - this export object was released/cancelled
+                // - the session expiration propagated to this export object
+                // - a parent export was released/dead prior to `setDependencies`
+                // Note that failed dependencies will be handled in the onResolveOne method below.
+
+                // since this is the first we know of the errorHandler, it could not have been invoked yet
+                if (errorHandler != null) {
+                    maybeAssignErrorId();
+                    errorHandler.onError(state, errorId, caughtException, failedDependencyLogIdentity);
+                }
                 return;
             }
 
-            this.exportMain = exportMain;
+            this.exportMain = Objects.requireNonNull(exportMain);
             this.errorHandler = errorHandler;
+            this.successHandler = successHandler;
 
-            setState(ExportNotification.State.PENDING);
+            if (state != ExportNotification.State.PUBLISHING) {
+                setState(ExportNotification.State.PENDING);
+            } else if (dependentCount > 0) {
+                throw new IllegalStateException("published exports cannot have dependencies");
+            }
             if (dependentCount <= 0) {
                 dependentCount = 0;
                 scheduleExport();
@@ -620,47 +742,46 @@ public class SessionState {
 
         /**
          * WARNING! This method call is only safe to use in the following patterns:
-         * <p/>
+         * <p>
          * 1) If an export (or non-export) {@link ExportBuilder#require}'d this export then the method is valid from
          * within the Callable/Runnable passed to {@link ExportBuilder#submit}.
-         * <p/>
+         * <p>
          * 2) By first obtaining a reference to the {@link ExportObject}, and then observing its state as
          * {@link ExportNotification.State#EXPORTED}. The caller must abide by the Liveness API and dropReference.
-         * <p/>
+         * <p>
          * Example:
          *
          * <pre>
          * {@code
-         *  <T> T getFromExport(ExportObject<T> export) {
-         *      if (export.tryRetainReference()) {
-         *          try {
-         *              if (export.getState() == ExportNotification.State.EXPORTED) {
-         *                  return export.get();
-         *              }
-         *          } finally {
-         *              export.dropReference();
-         *          }
-         *      }
-         *      return null;
-         *  }
-         *  }
+         * <T> T getFromExport(ExportObject<T> export) {
+         *     if (export.tryRetainReference()) {
+         *         try {
+         *             if (export.getState() == ExportNotification.State.EXPORTED) {
+         *                 return export.get();
+         *             }
+         *         } finally {
+         *             export.dropReference();
+         *         }
+         *     }
+         *     return null;
+         * }
+         * }
          * </pre>
          *
          * @return the result of the computed export
          */
         public T get() {
             if (session != null && session.isExpired()) {
-                throw GrpcUtil.statusRuntimeException(Code.UNAUTHENTICATED, "session has expired");
+                throw Exceptions.statusRuntimeException(Code.UNAUTHENTICATED, "session has expired");
             }
-
+            final T localResult = result;
             // Note: an export may be released while still being a dependency of queued work; so let's make sure we're
             // still valid
-            if (result == null) {
+            if (localResult == null) {
                 throw new IllegalStateException(
                         "Dependent export '" + exportId + "' is null and in state " + state.name());
             }
-
-            return result;
+            return localResult;
         }
 
         /**
@@ -676,6 +797,13 @@ public class SessionState {
          */
         public Ticket getExportId() {
             return ExportTicketHelper.wrapExportIdInTicket(exportId);
+        }
+
+        /**
+         * @return the export id for this export
+         */
+        public int getExportIdInt() {
+            return exportId;
         }
 
         /**
@@ -712,6 +840,9 @@ public class SessionState {
                     || isExportStateTerminal(this.state)) {
                 throw new IllegalStateException("cannot change state if export is already in terminal state");
             }
+            if (this.state != ExportNotification.State.UNKNOWN && this.state.getNumber() >= state.getNumber()) {
+                throw new IllegalStateException("export object state changes must advance toward a terminal state");
+            }
             this.state = state;
 
             // Send an export notification before possibly notifying children of our state change.
@@ -723,24 +854,53 @@ public class SessionState {
                 exportListenerVersion = session.exportListenerVersion;
                 session.exportListeners.forEach(listener -> listener.notify(notification));
             } else {
-                log.debug().append(session.logPrefix).append("non-export '").append(logIdentity)
-                        .append("' is ExportState.").append(state.name()).endl();
+                log.debug().append(session == null ? "Session " : session.logPrefix)
+                        .append("non-export '").append(logIdentity).append("' is ExportState.")
+                        .append(state.name()).endl();
             }
 
             if (isExportStateFailure(state) && errorHandler != null) {
-                safelyExecute(() -> errorHandler.onError(state, errorId, dependentHandle));
+                maybeAssignErrorId();
+                try {
+                    final Exception toReport;
+                    if (caughtException != null && errorTransformer != null) {
+                        toReport = errorTransformer.transform(caughtException);
+                    } else {
+                        toReport = caughtException;
+                    }
+
+                    errorHandler.onError(state, errorId, toReport, failedDependencyLogIdentity);
+                } catch (final Throwable err) {
+                    // this is a serious error; crash the jvm to ensure that we don't miss it
+                    log.error().append("Unexpected error while reporting ExportObject failure: ").append(err).endl();
+                    ProcessEnvironment.getGlobalFatalErrorReporter().reportAsync(
+                            "Unexpected error while reporting ExportObject failure", err);
+                }
             }
 
-            if (state == ExportNotification.State.EXPORTED || isExportStateTerminal(state)) {
+            final boolean isNowExported = state == ExportNotification.State.EXPORTED;
+            if (isNowExported && successHandler != null) {
+                try {
+                    successHandler.accept(result);
+                } catch (final Throwable err) {
+                    // this is a serious error; crash the jvm to ensure that we don't miss it
+                    log.error().append("Unexpected error while reporting ExportObject success: ").append(err).endl();
+                    ProcessEnvironment.getGlobalFatalErrorReporter().reportAsync(
+                            "Unexpected error while reporting ExportObject success", err);
+                }
+            }
+
+            if (isNowExported || isExportStateTerminal(state)) {
                 children.forEach(child -> child.onResolveOne(this));
                 children = Collections.emptyList();
-                parents.stream().filter(Objects::nonNull).forEach(this::unmanage);
+                parents.stream().filter(Objects::nonNull).forEach(this::tryUnmanage);
                 parents = Collections.emptyList();
                 exportMain = null;
                 errorHandler = null;
+                successHandler = null;
             }
 
-            if ((state == ExportNotification.State.EXPORTED && isNonExport()) || isExportStateTerminal(state)) {
+            if ((isNowExported && isNonExport()) || isExportStateTerminal(state)) {
                 dropReference();
             }
         }
@@ -756,38 +916,12 @@ public class SessionState {
                 return;
             }
 
-            // is this a cascading failure?
-            if (parent != null && isExportStateTerminal(parent.state)) {
-                synchronized (this) {
-                    errorId = parent.errorId;
-                    ExportNotification.State terminalState = ExportNotification.State.DEPENDENCY_FAILED;
-
-                    if (errorId == null) {
-                        final String errorDetails;
-                        switch (parent.state) {
-                            case RELEASED:
-                                terminalState = ExportNotification.State.DEPENDENCY_RELEASED;
-                                errorDetails = "dependency released by user.";
-                                break;
-                            case CANCELLED:
-                                terminalState = ExportNotification.State.DEPENDENCY_CANCELLED;
-                                errorDetails = "dependency cancelled by user.";
-                                break;
-                            default:
-                                // Note: the other error states should have non-null errorId
-                                errorDetails = "dependency does not have its own error defined " +
-                                        "and is in an unexpected state: " + parent.state;
-                                break;
-                        }
-
-                        errorId = UuidCreator.toString(UuidCreator.getRandomBased());
-                        dependentHandle = parent.logIdentity;
-                        log.error().append("Internal Error '").append(errorId).append("' ").append(errorDetails).endl();
-                    }
-
-                    setState(terminalState);
-                    return;
-                }
+            // Is this a cascading failure? Note that we manage the parents in `setDependencies` which
+            // keeps the parent results live until this child been exported. This means that the parent is allowed to
+            // be in a RELEASED state, but is not allowed to be in a failure state.
+            if (parent != null && isExportStateFailure(parent.state)) {
+                onDependencyFailure(parent);
+                return;
             }
 
             final int newDepCount = DEPENDENT_COUNT_UPDATER.decrementAndGet(this);
@@ -804,7 +938,7 @@ public class SessionState {
          */
         private void scheduleExport() {
             synchronized (this) {
-                if (state != ExportNotification.State.PENDING) {
+                if (state != ExportNotification.State.PENDING && state != ExportNotification.State.PUBLISHING) {
                     return;
                 }
                 setState(ExportNotification.State.QUEUED);
@@ -824,69 +958,120 @@ public class SessionState {
             final Callable<T> capturedExport;
             synchronized (this) {
                 capturedExport = exportMain;
-                if (state != ExportNotification.State.QUEUED || session.isExpired() || capturedExport == null) {
-                    return; // had a cancel race with client
+                // check for some sort of cancel race with client
+                if (state != ExportNotification.State.QUEUED
+                        || session.isExpired()
+                        || capturedExport == null
+                        || !tryRetainReference()) {
+                    if (!isExportStateTerminal(state)) {
+                        setState(ExportNotification.State.CANCELLED);
+                    } else if (errorHandler != null) {
+                        // noinspection ThrowableNotThrown
+                        Assert.statementNeverExecuted("in terminal state but error handler is not null");
+                    }
+                    return;
                 }
+                dropReference();
                 setState(ExportNotification.State.RUNNING);
             }
-            Exception exception = null;
+
+            T localResult = null;
             boolean shouldLog = false;
-            int evaluationNumber = -1;
-            QueryProcessingResults queryProcessingResults = null;
-            try (final AutoCloseable ignored = LivenessScopeStack.open()) {
-                queryProcessingResults = new QueryProcessingResults(
-                        QueryPerformanceRecorder.getInstance());
+            final QueryPerformanceRecorder exportRecorder;
+            try (final SafeCloseable ignored1 = session.executionContext.open();
+                    final SafeCloseable ignored2 = LivenessScopeStack.open()) {
 
-                evaluationNumber = QueryPerformanceRecorder.getInstance()
-                        .startQuery("session=" + session.sessionId + ",exportId=" + logIdentity);
-                try {
-                    setResult(capturedExport.call());
-                } finally {
-                    shouldLog = QueryPerformanceRecorder.getInstance().endQuery();
+                final String queryId;
+                if (isNonExport()) {
+                    queryId = "nonExport=" + logIdentity;
+                } else {
+                    queryId = "exportId=" + logIdentity;
                 }
-            } catch (final Exception err) {
-                exception = err;
-                synchronized (this) {
-                    if (!isExportStateTerminal(state)) {
-                        errorId = UuidCreator.toString(UuidCreator.getRandomBased());
-                        log.error().append("Internal Error '").append(errorId).append("' ").append(err).endl();
-                        setState(ExportNotification.State.FAILED);
+
+                final boolean isResume = queryPerformanceRecorder != null
+                        && queryPerformanceRecorder.getState() == QueryState.SUSPENDED;
+                exportRecorder = Objects.requireNonNullElseGet(queryPerformanceRecorder,
+                        () -> QueryPerformanceRecorder.newQuery("ExportObject#doWork(" + queryId + ")",
+                                session.getSessionId(), QueryPerformanceNugget.DEFAULT_FACTORY));
+
+                try (final SafeCloseable ignored3 = isResume
+                        ? exportRecorder.resumeQuery()
+                        : exportRecorder.startQuery()) {
+                    try {
+                        localResult = capturedExport.call();
+                    } catch (final Exception err) {
+                        caughtException = err;
+                    }
+                    shouldLog = exportRecorder.endQuery();
+                } catch (final Exception err) {
+                    // end query will throw if the export runner left the QPR in a bad state
+                    if (caughtException == null) {
+                        caughtException = err;
                     }
                 }
-            } finally {
-                if (exception != null && queryProcessingResults != null) {
-                    queryProcessingResults.setException(exception.toString());
-                }
-                QueryPerformanceRecorder.resetInstance();
-            }
-            if ((shouldLog || exception != null) && queryProcessingResults != null) {
-                final MemoryTableLoggers memLoggers = MemoryTableLoggers.getInstance();
-                final QueryPerformanceLogLogger qplLogger = memLoggers.getQplLogger();
-                final QueryOperationPerformanceLogLogger qoplLogger = memLoggers.getQoplLogger();
-                try {
-                    final QueryPerformanceNugget nugget = Require.neqNull(
-                            queryProcessingResults.getRecorder().getQueryLevelPerformanceData(),
-                            "queryProcessingResults.getRecorder().getQueryLevelPerformanceData()");
 
-                    // noinspection SynchronizationOnLocalVariableOrMethodParameter
-                    synchronized (qplLogger) {
-                        qplLogger.log(evaluationNumber,
-                                queryProcessingResults,
-                                nugget);
-                    }
-                    final List<QueryPerformanceNugget> nuggets =
-                            queryProcessingResults.getRecorder().getOperationLevelPerformanceData();
-                    // noinspection SynchronizationOnLocalVariableOrMethodParameter
-                    synchronized (qoplLogger) {
-                        int opNo = 0;
-                        for (QueryPerformanceNugget n : nuggets) {
-                            qoplLogger.log(opNo++, n);
+                if (caughtException != null) {
+                    synchronized (this) {
+                        if (!isExportStateTerminal(state)) {
+                            maybeAssignErrorId();
+                            if (!(caughtException instanceof StatusRuntimeException)) {
+                                log.error().append("Internal Error '").append(errorId).append("' ")
+                                        .append(caughtException).endl();
+                            }
+                            setState(ExportNotification.State.FAILED);
                         }
                     }
-                } catch (final Exception e) {
-                    log.error().append("Failed to log query performance data: ").append(e).endl();
+                }
+                if (shouldLog || caughtException != null) {
+                    EngineMetrics.getInstance().logQueryProcessingResults(exportRecorder, caughtException);
+                }
+                if (caughtException == null) {
+                    // must set result after ending the query so that onSuccess may resume / finalize a parent query
+                    setResult(localResult);
                 }
             }
+        }
+
+        private void maybeAssignErrorId() {
+            if (errorId == null) {
+                errorId = UuidCreator.toString(UuidCreator.getRandomBased());
+            }
+        }
+
+        private synchronized void onDependencyFailure(final ExportObject<?> parent) {
+            errorId = parent.errorId;
+            if (parent.caughtException instanceof StatusRuntimeException) {
+                caughtException = parent.caughtException;
+            }
+            ExportNotification.State terminalState = ExportNotification.State.DEPENDENCY_FAILED;
+
+            if (errorId == null) {
+                final String errorDetails;
+                switch (parent.state) {
+                    case RELEASED:
+                        terminalState = ExportNotification.State.DEPENDENCY_RELEASED;
+                        errorDetails = "dependency released by user.";
+                        break;
+                    case CANCELLED:
+                        terminalState = ExportNotification.State.DEPENDENCY_CANCELLED;
+                        errorDetails = "dependency cancelled by user.";
+                        break;
+                    default:
+                        // Note: the other error states should have non-null errorId
+                        errorDetails = "dependency does not have its own error defined " +
+                                "and is in an unexpected state: " + parent.state;
+                        break;
+                }
+
+                maybeAssignErrorId();
+                failedDependencyLogIdentity = parent.logIdentity;
+                if (!(caughtException instanceof StatusRuntimeException)) {
+                    log.error().append("Internal Error '").append(errorId).append("' ").append(errorDetails)
+                            .endl();
+                }
+            }
+
+            setState(terminalState);
         }
 
         /**
@@ -954,10 +1139,16 @@ public class SessionState {
             }
         }
 
+        @OverridingMethodsMustInvokeSuper
         @Override
         protected synchronized void destroy() {
             super.destroy();
             result = null;
+            // keep SREs since error propagation won't reference a real errorId on the server
+            if (!(caughtException instanceof StatusRuntimeException)) {
+                caughtException = null;
+            }
+            queryPerformanceRecorder = null;
         }
 
         /**
@@ -971,8 +1162,8 @@ public class SessionState {
             if (errorId != null) {
                 builder.setContext(errorId);
             }
-            if (dependentHandle != null) {
-                builder.setDependentHandle(dependentHandle);
+            if (failedDependencyLogIdentity != null) {
+                builder.setDependentHandle(failedDependencyLogIdentity);
             }
 
             return builder.build();
@@ -984,7 +1175,7 @@ public class SessionState {
         final ExportListener listener;
         synchronized (exportListeners) {
             if (isExpired()) {
-                throw GrpcUtil.statusRuntimeException(Code.UNAUTHENTICATED, "session has expired");
+                throw Exceptions.statusRuntimeException(Code.UNAUTHENTICATED, "session has expired");
             }
 
             listener = new ExportListener(observer);
@@ -1061,7 +1252,7 @@ public class SessionState {
          */
         private void initialize(final int versionId) {
             final String id = Integer.toHexString(System.identityHashCode(this));
-            log.info().append(logPrefix).append("refreshing listener ").append(id).endl();
+            log.debug().append(logPrefix).append("refreshing listener ").append(id).endl();
 
             for (final ExportObject<?> export : exportMap) {
                 if (!export.tryRetainReference()) {
@@ -1099,7 +1290,7 @@ public class SessionState {
                     .setExportState(ExportNotification.State.EXPORTED)
                     .setContext("run is complete")
                     .build());
-            log.info().append(logPrefix).append("run complete for listener ").append(id).endl();
+            log.debug().append(logPrefix).append("run complete for listener ").append(id).endl();
         }
 
         protected void onRemove() {
@@ -1110,7 +1301,7 @@ public class SessionState {
                 isClosed = true;
             }
 
-            safelyExecuteLocked(listener, listener::onCompleted);
+            safelyComplete(listener);
         }
     }
 
@@ -1124,9 +1315,12 @@ public class SessionState {
          * @param dependentExportId an identifier for the export id of the dependent that caused the failure if
          *        applicable
          */
-        void onError(final ExportNotification.State resultState, @Nullable final String errorContext,
+        void onError(final ExportNotification.State resultState,
+                final String errorContext,
+                @Nullable final Exception cause,
                 @Nullable final String dependentExportId);
     }
+
     @FunctionalInterface
     public interface ExportErrorGrpcHandler {
         /**
@@ -1138,33 +1332,68 @@ public class SessionState {
         void onError(final StatusRuntimeException notification);
     }
 
+    /**
+     * Convert an {@link ExportErrorGrpcHandler} to an {@link ExportErrorHandler}.
+     * <p>
+     * gRPC's error handlers are designed to consume {@link StatusRuntimeException} objects. Exports can fail for a
+     * variety of reasons, and the {@link ExportErrorHandler} is designed to richly communicate export failures. This
+     * method is the glue between the two error handling APIs; enabling export error propagation to gRPC clients.
+     *
+     * @param errorHandler the gRPC specific error handler
+     * @return the generalized error handler
+     */
+    public static SessionState.ExportErrorHandler toErrorHandler(final ExportErrorGrpcHandler errorHandler) {
+        return (resultState, errorContext, cause, dependentExportId) -> {
+            if (cause instanceof StatusRuntimeException) {
+                errorHandler.onError((StatusRuntimeException) cause);
+                return;
+            }
+
+            final String dependentStr = dependentExportId == null ? ""
+                    : (" (related parent export id: " + dependentExportId + ")");
+            if (cause == null) {
+                if (resultState == ExportNotification.State.CANCELLED) {
+                    errorHandler.onError(Exceptions.statusRuntimeException(Code.CANCELLED,
+                            "Export is cancelled" + dependentStr));
+                } else {
+                    errorHandler.onError(Exceptions.statusRuntimeException(Code.FAILED_PRECONDITION,
+                            "Export in state " + resultState + dependentStr));
+                }
+            } else {
+                errorHandler.onError(Exceptions.statusRuntimeException(Code.FAILED_PRECONDITION,
+                        "Details Logged w/ID '" + errorContext + "'" + dependentStr));
+            }
+        };
+    }
+
     public class ExportBuilder<T> {
         private final int exportId;
         private final ExportObject<T> export;
 
         private boolean requiresSerialQueue;
         private ExportErrorHandler errorHandler;
+        private Consumer<? super T> successHandler;
 
         ExportBuilder(final int exportId) {
             this.exportId = exportId;
-
             if (exportId == NON_EXPORT_ID) {
-                this.export = new ExportObject<>(SessionState.this, NON_EXPORT_ID);
+                this.export = new ExportObject<>(SessionState.this.errorTransformer, SessionState.this, NON_EXPORT_ID);
             } else {
                 // noinspection unchecked
                 this.export = (ExportObject<T>) exportMap.putIfAbsent(exportId, EXPORT_OBJECT_VALUE_FACTORY);
-                switch (this.export.getState()) {
-                    case UNKNOWN:
-                        return;
-                    case RELEASED:
-                    case CANCELLED:
-                        throw GrpcUtil.statusRuntimeException(Code.FAILED_PRECONDITION,
-                                "export already released/cancelled id: " + exportId);
-                    default:
-                        throw GrpcUtil.statusRuntimeException(Code.FAILED_PRECONDITION,
-                                "cannot re-export to existing exportId: " + exportId);
-                }
             }
+        }
+
+        /**
+         * Set the performance recorder to resume when running this export.
+         *
+         * @param queryPerformanceRecorder the performance recorder
+         * @return this builder
+         */
+        public ExportBuilder<T> queryPerformanceRecorder(
+                @NotNull final QueryPerformanceRecorder queryPerformanceRecorder) {
+            export.setQueryPerformanceRecorder(queryPerformanceRecorder);
+            return this;
         }
 
         /**
@@ -1186,7 +1415,7 @@ public class SessionState {
          * @return this builder
          */
         public ExportBuilder<T> require(final ExportObject<?>... dependencies) {
-            export.setDependencies(Arrays.asList(dependencies));
+            export.setDependencies(List.of(dependencies));
             return this;
         }
 
@@ -1197,16 +1426,15 @@ public class SessionState {
          * @param dependencies the parent dependencies
          * @return this builder
          */
-        public <S> ExportBuilder<T> require(final List<ExportObject<S>> dependencies) {
-            export.setDependencies(Collections.unmodifiableList(dependencies));
+        public ExportBuilder<T> require(final List<? extends ExportObject<?>> dependencies) {
+            export.setDependencies(List.copyOf(dependencies));
             return this;
         }
 
         /**
          * Invoke this method to set the error handler to be notified if this export fails. Only one error handler may
-         * be set.
+         * be set. Exactly one of the onError and onSuccess handlers will be invoked.
          * <p>
-         * </p>
          * Not synchronized, it is expected that the provided callback handles thread safety itself.
          *
          * @param errorHandler the error handler to be notified
@@ -1215,6 +1443,8 @@ public class SessionState {
         public ExportBuilder<T> onError(final ExportErrorHandler errorHandler) {
             if (this.errorHandler != null) {
                 throw new IllegalStateException("error handler already set");
+            } else if (export.hasHadWorkSet) {
+                throw new IllegalStateException("error handler must be set before work is submitted");
             }
             this.errorHandler = errorHandler;
             return this;
@@ -1222,56 +1452,97 @@ public class SessionState {
 
         /**
          * Invoke this method to set the error handler to be notified if this export fails. Only one error handler may
-         * be set.
+         * be set. Exactly one of the onError and onSuccess handlers will be invoked.
          * <p>
-         * </p>
          * Not synchronized, it is expected that the provided callback handles thread safety itself.
          *
          * @param errorHandler the error handler to be notified
          * @return this builder
          */
         public ExportBuilder<T> onErrorHandler(final ExportErrorGrpcHandler errorHandler) {
-            return onError(((resultState, errorContext, dependentExportId) -> {
-                final String dependentStr = dependentExportId == null ? ""
-                        : (" (related parent export id: " + dependentExportId + ")");
-                errorHandler.onError(GrpcUtil.statusRuntimeException(
-                        Code.FAILED_PRECONDITION,
-                        "Details Logged w/ID '" + errorContext + "'" + dependentStr));
-            }));
+            return onError(toErrorHandler(errorHandler));
         }
 
         /**
          * Invoke this method to set the error handler to be notified if this export fails. Only one error handler may
-         * be set. This is a convenience method for use with {@link StreamObserver}.
+         * be set. This is a convenience method for use with {@link StreamObserver}. Exactly one of the onError and
+         * onSuccess handlers will be invoked.
          * <p>
-         * </p>
          * Invoking onError will be synchronized on the StreamObserver instance, so callers can rely on that mechanism
          * to deal with more than one thread trying to write to the stream.
          *
          * @param streamObserver the streamObserver to be notified of any error
          * @return this builder
          */
-        public ExportBuilder<T> onError(StreamObserver<?> streamObserver) {
+        public ExportBuilder<T> onError(final StreamObserver<?> streamObserver) {
             return onErrorHandler(statusRuntimeException -> {
-                synchronized (streamObserver) {
-                    streamObserver.onError(statusRuntimeException);
-                }
+                safelyError(streamObserver, statusRuntimeException);
             });
+        }
+
+        /**
+         * Invoke this method to set the onSuccess handler to be notified if this export succeeds. Only one success
+         * handler may be set. Exactly one of the onError and onSuccess handlers will be invoked.
+         * <p>
+         * Not synchronized, it is expected that the provided callback handles thread safety itself.
+         *
+         * @param successHandler the onSuccess handler to be notified
+         * @return this builder
+         */
+        public ExportBuilder<T> onSuccess(final Consumer<? super T> successHandler) {
+            if (this.successHandler != null) {
+                throw new IllegalStateException("success handler already set");
+            } else if (export.hasHadWorkSet) {
+                throw new IllegalStateException("success handler must be set before work is submitted");
+            }
+            this.successHandler = successHandler;
+            return this;
+        }
+
+        /**
+         * Invoke this method to set the onSuccess handler to be notified if this export succeeds. Only one success
+         * handler may be set. Exactly one of the onError and onSuccess handlers will be invoked.
+         * <p>
+         * Not synchronized, it is expected that the provided callback handles thread safety itself.
+         *
+         * @param successHandler the onSuccess handler to be notified
+         * @return this builder
+         */
+        public ExportBuilder<T> onSuccess(final Runnable successHandler) {
+            return onSuccess(ignored -> successHandler.run());
+        }
+
+        /**
+         * Invoke this method to set the {@link StreamObserver} to be
+         * {@link io.deephaven.extensions.barrage.util.GrpcUtil#safelyComplete(StreamObserver) safely completed} if this
+         * export succeeds. Only one success handler may be set. Exactly one of the onError and onSuccess handlers will
+         * be invoked.
+         * <p>
+         * Not synchronized, it is expected that the provided callback handles thread safety itself.
+         *
+         * @param streamObserver the streamObserver to be notified
+         * @return this builder
+         */
+        public ExportBuilder<T> onSuccess(final StreamObserver<?> streamObserver) {
+            return onSuccess(() -> safelyComplete(streamObserver));
         }
 
         /**
          * This method is the final method for submitting an export to the session. The provided callable is enqueued on
          * the scheduler when all dependencies have been satisfied. Only the dependencies supplied to the builder are
          * guaranteed to be resolved when the exportMain is executing.
-         *
+         * <p>
          * Warning! It is the SessionState owner's responsibility to wait to release any dependency until after this
          * exportMain callable/runnable has complete.
          *
          * @param exportMain the callable that generates the export
          * @return the submitted export object
+         * @apiNote For exports used in RPC handling, it is recommended to use {@link #onSuccess onSuccess} for result
+         *          message (unary) and completion (unary or streaming) delivery, rather than from {@code exportMain}.
+         *          This allows clients to observe performance results more predictably.
          */
         public ExportObject<T> submit(final Callable<T> exportMain) {
-            export.setWork(exportMain, errorHandler, requiresSerialQueue);
+            export.setWork(exportMain, errorHandler, successHandler, requiresSerialQueue);
             return export;
         }
 
@@ -1279,12 +1550,15 @@ public class SessionState {
          * This method is the final method for submitting an export to the session. The provided runnable is enqueued on
          * the scheduler when all dependencies have been satisfied. Only the dependencies supplied to the builder are
          * guaranteed to be resolved when the exportMain is executing.
-         *
+         * <p>
          * Warning! It is the SessionState owner's responsibility to wait to release any dependency until after this
          * exportMain callable/runnable has complete.
          *
          * @param exportMain the runnable to execute once dependencies have resolved
          * @return the submitted export object
+         * @apiNote For exports used in RPC handling, it is recommended to use {@link #onSuccess onSuccess} for result
+         *          message (unary) and completion (unary or streaming) delivery, rather than from {@code exportMain}.
+         *          This allows clients to observe performance results more predictably.
          */
         public ExportObject<T> submit(final Runnable exportMain) {
             return submit(() -> {
@@ -1309,7 +1583,7 @@ public class SessionState {
     }
 
     private static final KeyedIntObjectKey<ExportObject<?>> EXPORT_OBJECT_ID_KEY =
-            new KeyedIntObjectKey.BasicStrict<ExportObject<?>>() {
+            new KeyedIntObjectKey.BasicStrict<>() {
                 @Override
                 public int getIntKey(final ExportObject<?> exportObject) {
                     return exportObject.exportId;
@@ -1317,16 +1591,14 @@ public class SessionState {
             };
 
     private final KeyedIntObjectHash.ValueFactory<ExportObject<?>> EXPORT_OBJECT_VALUE_FACTORY =
-            new KeyedIntObjectHash.ValueFactory.Strict<ExportObject<?>>() {
+            new KeyedIntObjectHash.ValueFactory.Strict<>() {
                 @Override
                 public ExportObject<?> newValue(final int key) {
                     if (isExpired()) {
-                        throw GrpcUtil.statusRuntimeException(Code.UNAUTHENTICATED, "session has expired");
+                        throw Exceptions.statusRuntimeException(Code.UNAUTHENTICATED, "session has expired");
                     }
 
-                    final ExportObject<Object> retval = new ExportObject<>(SessionState.this, key);
-                    retval.retainReference();
-                    return retval;
+                    return new ExportObject<>(SessionState.this.errorTransformer, SessionState.this, key);
                 }
             };
 }
